Entities and repositories added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+mongodb.connection.string=mongodb+srv://<user>:<password>@<databaseUrl>/wallet-manager?retryWrites=true&w=majority
+mongodb.database=wallet-manager
 
+server.servlet.contextPath=/api/v1
