--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.wallet</groupId>
 	<artifactId>wallet-manager</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>wallet-manager</name>
 	<description>Wallet manager API</description>
 	<properties>
